--- a/config/cable.yml
+++ b/config/cable.yml
@@ -4,9 +4,9 @@ development:
 
 test:
   adapter: redis
-  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
+  url: <%= ENV["REDIS_URL"] %>
 
 production:
   adapter: redis
-  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
+  url: <%= ENV["REDIS_URL"] %>
   channel_prefix: mindora_production
