--- a/fly.production.toml
+++ b/fly.production.toml
@@ -1,25 +1,30 @@
-# fly.toml app configuration file generated for piq-test on 2023-12-16T22:20:23+08:00
+# fly.production.toml app configuration file generated for mindora on 2023-12-22T12:28:33+08:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = "piq-test"
+app = "mindora"
 primary_region = "sin"
 console_command = "/rails/bin/rails console"
 
 [build]
+
+[deploy]
+  release_command = "./bin/rails db:prepare"
 
 [http_service]
   internal_port = 3000
   force_https = true
   auto_stop_machines = true
   auto_start_machines = true
-  min_machines_running = 1
+  min_machines_running = 0
   processes = ["app"]
+
+[[vm]]
+  cpu_kind = "shared"
+  cpus = 1
+  memory_mb = 512
 
 [[statics]]
   guest_path = "/rails/public"
   url_prefix = "/"
-
-[env]
-RAILS_ENV = "test"
