--- a/fly.production.toml
+++ b/fly.production.toml
@@ -17,7 +17,7 @@ console_command = "/rails/bin/rails console"
   force_https = true
   auto_stop_machines = true
   auto_start_machines = true
-  min_machines_running = 0
+  min_machines_running = 1
   processes = ["app"]
 
 [[vm]]
@@ -28,3 +28,6 @@ console_command = "/rails/bin/rails console"
 [[statics]]
   guest_path = "/rails/public"
   url_prefix = "/"
+
+[env]
+RAILS_ENV = "production"
