--- a/fly.toml
+++ b/fly.toml
@@ -1,4 +1,4 @@
-# fly.production.toml app configuration file generated for mindora on 2023-12-22T12:28:33+08:00
+# fly.toml app configuration file generated for mindora on 2023-12-22T18:27:28+08:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
@@ -11,6 +11,9 @@ console_command = "/rails/bin/rails console"
 
 [deploy]
   release_command = "./bin/rails db:prepare"
+
+[env]
+  RAILS_ENV = "production"
 
 [http_service]
   internal_port = 3000
@@ -28,6 +31,3 @@ console_command = "/rails/bin/rails console"
 [[statics]]
   guest_path = "/rails/public"
   url_prefix = "/"
-
-[env]
-RAILS_ENV = "production"
