--- a/fly.toml
+++ b/fly.toml
@@ -20,6 +20,10 @@ console_command = "/rails/bin/rails console"
   min_machines_running = 1
   processes = ["app"]
 
+[processes]
+app = "./bin/rails server"
+worker = "bundle exec good_job start"
+
 [[statics]]
   guest_path = "/rails/public"
   url_prefix = "/"
