--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -23,3 +23,4 @@ jobs:
         run: flyctl deploy -c fly.toml --remote-only
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_PRODUCTION_ENV_TOKEN }}
+          TENCENT_CLOUD_COS_ENDPOINT: "https://cos.ap-singapore.myqcloud.com"
