--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -17,6 +17,8 @@ jobs:
         run: flyctl deploy -c fly.test.toml --remote-only
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TEST_ENV_TOKEN }}
+          TENCENT_CLOUD_COS_ENDPOINT: "https://cos.ap-singapore.myqcloud.com"
+          TENCENT_CLOUD_COS_BUCKET: "chanpinwangwangtest-1256601241"
 
       - name: Deploy to Production
         if: github.ref == 'refs/heads/main'
@@ -24,3 +26,4 @@ jobs:
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_PRODUCTION_ENV_TOKEN }}
           TENCENT_CLOUD_COS_ENDPOINT: "https://cos.ap-singapore.myqcloud.com"
+          TENCENT_CLOUD_COS_BUCKET: "chanpinwangwangprod-1256601241"
