--- a/fly.test.toml
+++ b/fly.test.toml
@@ -26,3 +26,5 @@ release_command = "./bin/rails db:prepare"
 
 [env]
 RAILS_ENV = "test"
+TENCENT_CLOUD_COS_ENDPOINT= "https://cos.ap-singapore.myqcloud.com"
+TENCENT_CLOUD_COS_BUCKET= "chanpinwangwangtest-1256601241"
