--- a/fly.toml
+++ b/fly.toml
@@ -30,3 +30,5 @@ app = "./bin/rails server"
 
 [env]
 RAILS_ENV = "production"
+TENCENT_CLOUD_COS_ENDPOINT= "https://cos.ap-singapore.myqcloud.com"
+TENCENT_CLOUD_COS_BUCKET= "chanpinwangwangprod-1256601241"
