feat(flyio): enable RAILS_LOG_TO_STDOUT

--- a/fly.toml
+++ b/fly.toml
@@ -32,4 +32,5 @@ app = "./bin/rails server"
 RAILS_ENV = "production"
 TENCENT_CLOUD_COS_ENDPOINT= "https://cos.ap-singapore.myqcloud.com"
 TENCENT_CLOUD_COS_BUCKET= "chanpinwangwangprod-1256601241"
+RAILS_LOG_TO_STDOUT = "true"
 AZURE_OPENAI_URI="https://pmwangwang-au.openai.azure.com/openai/deployments/gpt-4"
