feat(ChatGPT): migrate to Azure openai

--- a/fly.test.toml
+++ b/fly.test.toml
@@ -28,3 +28,4 @@ release_command = "./bin/rails db:prepare"
 RAILS_ENV = "test"
 TENCENT_CLOUD_COS_ENDPOINT= "https://cos.ap-singapore.myqcloud.com"
 TENCENT_CLOUD_COS_BUCKET= "chanpinwangwangtest-1256601241"
+AZURE_OPENAI_URI="https://pmwangwang-au.openai.azure.com/openai/deployments/gpt-4"
