--- a/fly.toml
+++ b/fly.toml
@@ -30,7 +30,7 @@ app = "./bin/rails server"
 
 [env]
 RAILS_ENV = "production"
-TENCENT_CLOUD_COS_ENDPOINT= "https://cos.ap-singapore.myqcloud.com"
-TENCENT_CLOUD_COS_BUCKET= "chanpinwangwangprod-1256601241"
+TENCENT_CLOUD_COS_ENDPOINT = "https://cos.ap-singapore.myqcloud.com"
+TENCENT_CLOUD_COS_BUCKET = "chanpinwangwangprod-1256601241"
 RAILS_LOG_TO_STDOUT = "true"
-AZURE_OPENAI_URI="https://pmwangwang-au.openai.azure.com/openai/deployments/gpt-4"
+AZURE_OPENAI_URI = "https://pmwangwang-au.openai.azure.com/openai/deployments/gpt-4"
