--- a/fly.test.toml
+++ b/fly.test.toml
@@ -30,4 +30,4 @@ TENCENT_CLOUD_COS_ENDPOINT = "https://cos.ap-singapore.myqcloud.com"
 TENCENT_CLOUD_COS_BUCKET = "chanpinwangwangtest-1256601241"
 RAILS_LOG_TO_STDOUT = "true"
 AZURE_OPENAI_URI = "https://pmwangwang-au.openai.azure.com/openai/deployments/gpt-4"
-FILES_CDN_URL="http://files-test.pmwangwang.com"
+FILES_CDN_URL="https://files-test.pmwangwang.com"
