feat(resume): init async job

--- a/fly.test.toml
+++ b/fly.test.toml
@@ -20,6 +20,10 @@ release_command = "./bin/rails db:prepare"
   min_machines_running = 0
   processes = ["app"]
 
+[processes]
+app = "./bin/rails server"
+worker = "bundle exec sidekiq"
+
 [[statics]]
   guest_path = "/rails/public"
   url_prefix = "/"
