--- a/fly.toml
+++ b/fly.toml
@@ -22,7 +22,7 @@ console_command = "/rails/bin/rails console"
 
 [processes]
 app = "./bin/rails server"
-#worker = "bundle exec good_job start"
+worker = "bundle exec sidekiq"
 
 [[statics]]
   guest_path = "/rails/public"
