--- a/fly.test.toml
+++ b/fly.test.toml
@@ -36,3 +36,7 @@ RAILS_LOG_TO_STDOUT = "true"
 AZURE_OPENAI_URI = "https://pmwangwang-au.openai.azure.com/openai/deployments/gpt-4"
 AZURE_EASTUS2_OPENAI_URI="https://pmwangwang-eastus2.openai.azure.com/openai/deployments/gpt-4o"
 FILES_CDN_URL="https://files-test.pmwangwang.com"
+
+[[vm]]
+size = "shared-cpu-1x"
+memory = "512MB"
