--- a/fly.toml
+++ b/fly.toml
@@ -28,6 +28,10 @@ worker = "bundle exec sidekiq"
   guest_path = "/rails/public"
   url_prefix = "/"
 
+[[vm]]
+size = "shared-cpu-1x"
+memory = "1GB"
+
 [env]
 RAILS_ENV = "production"
 TENCENT_CLOUD_COS_ENDPOINT = "https://cos.ap-singapore.myqcloud.com"
