chore(*): deprecate OpenAI envs

--- a/fly.test.toml
+++ b/fly.test.toml
@@ -37,6 +37,5 @@ RAILS_ENV = "test"
 TENCENT_CLOUD_COS_ENDPOINT = "https://cos.ap-singapore.myqcloud.com"
 TENCENT_CLOUD_COS_BUCKET = "chanpinwangwangtest-1256601241"
 RAILS_LOG_TO_STDOUT = "true"
-AZURE_OPENAI_URI = "https://pmwangwang-au.openai.azure.com/openai/deployments/gpt-4"
-AZURE_EASTUS2_OPENAI_URI="https://pmwangwang-eastus2.openai.azure.com/openai/deployments/gpt-4o"
+AZURE_OPENAI_URI = "https://pmwangwang-eastus2.openai.azure.com/openai/deployments/gpt-4o"
 FILES_CDN_URL="https://files-test.pmwangwang.com"
