--- a/fly.toml
+++ b/fly.toml
@@ -44,6 +44,5 @@ RAILS_ENV = "production"
 TENCENT_CLOUD_COS_ENDPOINT = "https://cos.ap-singapore.myqcloud.com"
 TENCENT_CLOUD_COS_BUCKET = "chanpinwangwangprod-1256601241"
 RAILS_LOG_TO_STDOUT = "true"
-AZURE_OPENAI_URI = "https://pmwangwang-au.openai.azure.com/openai/deployments/gpt-4"
-AZURE_EASTUS2_OPENAI_URI="https://pmwangwang-eastus2.openai.azure.com/openai/deployments/gpt-4o"
+AZURE_OPENAI_URI = "https://pmwangwang-eastus2.openai.azure.com/openai/deployments/gpt-4o"
 FILES_CDN_URL="https://files.pmwangwang.com"
